--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.14.0",
     "mocha": "^2.5.3",
     "mongoose": "^4.11.12",
-    "next": "latest",
+    "next": "^4.2.3",
     "node-cache": "^4.1.1",
     "pm2": "^2.4.6",
     "q": "^1.5.0",
