Build before run in docker-compose

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,6 +6,6 @@ services:
     build: .
     ports:
       - "3001:3001"
-    command: bash -c "npm run start"
+    command: bash -c "npm run build;npm run start"
     volumes:
       - .:/usr/src/app
